--- a/Chalkable.StiImport/Chalkable.StiImport.csproj
+++ b/Chalkable.StiImport/Chalkable.StiImport.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Services\ImportService.delete.cs" />
     <Compile Include="Services\ImportService.insert.cs" />
     <Compile Include="Services\ImportService.update.cs" />
+    <Compile Include="Services\ImportServiceLocatorMaster.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Chalkable.BusinessLogic\Chalkable.BusinessLogic.csproj">
@@ -74,6 +75,10 @@
     <ProjectReference Include="..\Chalkable.Common\Chalkable.Common.csproj">
       <Project>{3615F16A-B37F-40B4-B58D-CC39FA8F6646}</Project>
       <Name>Chalkable.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Chalkable.Data.Common\Chalkable.Data.Common.csproj">
+      <Project>{CEB50B03-B84B-4194-9BEE-F1A2EBD17686}</Project>
+      <Name>Chalkable.Data.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Chalkable.Data.Master\Chalkable.Data.Master.csproj">
       <Project>{C9ACB7A6-1755-424A-B0BB-3B0C5B13EC15}</Project>
