fixed build configs

--- a/Chalkable.MixPanel/Chalkable.MixPanel.csproj
+++ b/Chalkable.MixPanel/Chalkable.MixPanel.csproj
@@ -39,6 +39,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mixpanel.NET, Version=0.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\3rdParty\Mixpanel.NET.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -60,10 +64,6 @@
     <ProjectReference Include="..\Chalkable.Common\Chalkable.Common.csproj">
       <Project>{3615F16A-B37F-40B4-B58D-CC39FA8F6646}</Project>
       <Name>Chalkable.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mixpanel.NET\src\Mixpanel.NET\Mixpanel.NET.csproj">
-      <Project>{352023d1-2498-44e2-b2a8-340fa959fede}</Project>
-      <Name>Mixpanel.NET</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
