--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -104,12 +104,14 @@
     <Compile Include="Connectors\Model\StiAttachment.cs" />
     <Compile Include="Connectors\Model\StudentAverageComment.cs" />
     <Compile Include="Connectors\Model\StudentAverages.cs" />
+    <Compile Include="Connectors\Model\StudentCondition.cs" />
     <Compile Include="Connectors\Model\User.cs" />
     <Compile Include="Connectors\Model\WorksheetReportParams.cs" />
     <Compile Include="Connectors\ReportConnector.cs" />
     <Compile Include="Connectors\SeatingChartConnector.cs" />
     <Compile Include="Connectors\SectionStandardConnector.cs" />
     <Compile Include="Connectors\StandardScoreConnector.cs" />
+    <Compile Include="Connectors\StudentConnector.cs" />
     <Compile Include="Connectors\SyncConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncModel\AbsenceLevelReason.cs" />
