--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -80,7 +80,9 @@
     <Compile Include="Connectors\ActivityScoreConnector.cs" />
     <Compile Include="Connectors\AttachmentConnector.cs" />
     <Compile Include="Connectors\AttendanceConnector.cs" />
-    <Compile Include="Connectors\ConnectorBase.cs" />
+    <Compile Include="Connectors\ConnectorBase.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Connectors\ConnectorLocator.cs" />
     <Compile Include="Connectors\DisciplineConnector.cs" />
     <Compile Include="Connectors\GradebookConnector.cs" />
