Added Fluent ACS sources and fixed multiinstance related bug there. Removed unimplemented Chalkable API.

--- a/WindowsAzure.Acs.Oauth2/WindowsAzure.Acs.Oauth2.csproj
+++ b/WindowsAzure.Acs.Oauth2/WindowsAzure.Acs.Oauth2.csproj
@@ -78,9 +78,6 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentACS">
-      <HintPath>..\packages\FluentACS.1.0.0\lib\net40\FluentACS.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.IdentityModel">
       <HintPath>..\packages\Microsoft.IdentityModel.6.1.7600.16394\lib\net35\Microsoft.IdentityModel.dll</HintPath>
     </Reference>
@@ -245,6 +242,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FluentACS\FluentACS.csproj">
+      <Project>{7257f961-4bfd-4d2c-9521-a4c711c90476}</Project>
+      <Name>FluentACS</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
