--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,5 +6,6 @@
   <repository path="..\Chalkable.Data.Common\packages.config" />
   <repository path="..\Chalkable.StiConnector\packages.config" />
   <repository path="..\Chalkable.Web\packages.config" />
+  <repository path="..\FluentACS\packages.config" />
   <repository path="..\WindowsAzure.Acs.Oauth2\packages.config" />
 </repositories>
