--- a/Chalkable.Web/Web.Release.config
+++ b/Chalkable.Web/Web.Release.config
@@ -4,8 +4,8 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=pfl0jvxjro.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=pfl0jvxjro.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="ChalkableMaster" connectionString="Data Source=yqdubo97gg.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=yqdubo97gg.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
   <appSettings>
@@ -39,7 +39,7 @@
   </system.web>
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10" DemoSchoolsReserved="20" xdt:Transform="Replace" xdt:Locator="XPath(/configuration/ChalkableConfiguration)">
     <Servers>
-      <add key="DbServer1" value="pfl0jvxjro.database.windows.net" />
+      <add key="DbServer1" value="yqdubo97gg.database.windows.net" />
     </Servers>
   </ChalkableConfiguration>
 </configuration>
