--- a/Chalkable.Web/Web.Release.config
+++ b/Chalkable.Web/Web.Release.config
@@ -23,6 +23,17 @@
     <!--<add key="mixpanel-token" value="2f0bfa09aa5390f4aa43c423b1f080f9" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>-->
 
   </appSettings>
+
+
+  <system.diagnostics xdt:Transform="Replace">
+    <trace autoflush="false" indentsize="4">
+      <listeners>
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+          <filter type=""/>
+        </add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
