--- a/Chalkable.Web/Web.qa.config
+++ b/Chalkable.Web/Web.qa.config
@@ -22,6 +22,18 @@
 		<add key="api.explorer.client-name" value="api explorer" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="api.explorer.scope" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>-->
   </appSettings>
+
+  <system.diagnostics xdt:Transform="Replace">
+    <trace autoflush="false" indentsize="4">
+      <listeners>
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+          <filter type=""/>
+        </add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
+
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
