disable connection pool for bg processor

--- a/Chalkable.BackgroundTaskProcessor/app.config
+++ b/Chalkable.BackgroundTaskProcessor/app.config
@@ -25,9 +25,9 @@
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
+    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!;Pooling=false" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!;Pooling=false"/>
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3};Pooling=false" />
   </connectionStrings>
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10"
                           DemoSchoolsReserved="4" TaskProcessorDelay="-1">
