--- a/Chalkable.Web/Web.qa.config
+++ b/Chalkable.Web/Web.qa.config
@@ -10,17 +10,17 @@
   </connectionStrings>
 
   <appSettings>
-    <!--<add key="WindowsAzure.OAuth.SwtSigningKey" value="s6L1PpCuOrYHg93h+zszvnbFDSKPIFwwMmWGbfxLc0U=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="WindowsAzure.OAuth.RelyingPartyName" value="dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="WindowsAzure.OAuth.ServiceNamespace" value="chalkable-dev-access-control" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WindowsAzure.OAuth.SwtSigningKey" value="Yqw/rtCv1iQ7eHejhSTVzV81Zv0Z51G/BCA/B9W4XU8=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.RelyingPartyName" value="qa.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://qa.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.ServiceNamespace" value="chalkable-qa-access-control" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserName" value="ManagementClient" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserKey" value="5e4ner6DWKJqPblD+rrit2FblrM5cAdasvA8XAFu630=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="api.explorer.client-id" value="https://dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserKey" value="1PjfB6WRfT7szdig42F59R4H65H+ak23RM5SJJ7pr9U=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="api.explorer.client-id" value="https://qa.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="api.explorer.secret" value="Qwerty1@" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="api.explorer.redirecturi" value="https://dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="api.explorer.redirecturi" value="https://qa.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="api.explorer.client-name" value="api explorer" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="api.explorer.scope" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>-->
+		<add key="api.explorer.scope" value="https://qa.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <system.diagnostics xdt:Transform="Replace">
