added configs for compile helper

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -9,6 +9,9 @@
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
+    <add key="ScriptsRoot" value="https://127.0.0.1:444/"/>
+    <add key="ScriptsRootIncludeVersion" value="false"/>
+    <!--<add key="ScriptsRoot" value="https://az374501.vo.msecnd.net/static-"/>-->
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
