--- a/Chalkable.Web/app/ria/package.json
+++ b/Chalkable.Web/app/ria/package.json
@@ -2,11 +2,11 @@
     "name": "emp.ria-framework",
     "title": "EMP RIA Framework",
     "description": "EMP rich internet application framework",
-    "version": "0.1.0-beta",
+    "version": "0.1.12",
     "main": "_bootstrap.node.js",
     "homepage": "https://code.google.com/p/emp-ria/",
     "author": "Volodymyr Iatsyshyn <viatsyshyn@gmail.com>",
-    "repository": "http://emp-ria.googlecode.com/svn/trunk/",
+    "repository": "http://mp-ria.googlecode.com/svn/trunk/",
     "keywords": [
         "emp.ria",
         "javascript",
@@ -15,12 +15,10 @@
     "bugs": {
         "url": "https://code.google.com/p/emp-ria/issues/list"
     },
-    "licenses": [
-        {
-            "type": "MIT",
-            "url": "https://github.com/jquery/jquery/blob/master/MIT-LICENSE.txt"
-        }
-    ],
+    "licenses": [{
+        "type": "MIT",
+        "url": "https://github.com/jquery/jquery/blob/master/MIT-LICENSE.txt"
+    }],
     "dependencies": {},
     "devDependencies": {},
     "scripts": {}
