--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -97,7 +97,7 @@
     <Compile Include="Model\GradingStandardInfo.cs" />
     <Compile Include="Model\RecipientInfo.cs" />
     <Compile Include="Model\SeatingChartInfo.cs" />
-    <Compile Include="Model\StudentSummeryInfo.cs" />
+    <Compile Include="Model\StudentSummaryInfo.cs" />
     <Compile Include="Model\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\AddressSecurity.cs" />
