--- a/Chalkable.Web/Web.Release.config
+++ b/Chalkable.Web/Web.Release.config
@@ -10,7 +10,7 @@
   </connectionStrings>
   <appSettings>
     <add key="ScriptsRoot" value="https://az374501.vo.msecnd.net/static-" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ScriptsRootIncludeVersion" value="true"/>
+    <add key="ScriptsRootIncludeVersion" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="WindowsAzure.OAuth.SwtSigningKey" value="6ielVZXrxXB3ZrU/4om5/HM5a7GGniMmMriAevxxyQw=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="WindowsAzure.OAuth.RelyingPartyName" value="chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
