--- a/Chalkable.Web/Web.qa.config
+++ b/Chalkable.Web/Web.qa.config
@@ -11,7 +11,7 @@
 
   <appSettings>
     <add key="ScriptsRoot" value="https://az374501.vo.msecnd.net/static-" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ScriptsRootIncludeVersion" value="true"/>
+    <add key="ScriptsRootIncludeVersion" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="WindowsAzure.OAuth.SwtSigningKey" value="Yqw/rtCv1iQ7eHejhSTVzV81Zv0Z51G/BCA/B9W4XU8=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.RelyingPartyName" value="qa.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://qa.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
