--- a/Chalkable.Web/Web.staging.config
+++ b/Chalkable.Web/Web.staging.config
@@ -10,7 +10,7 @@
   </connectionStrings>
   <appSettings>
     <add key="ScriptsRoot" value="https://az374501.vo.msecnd.net/static-" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ScriptsRootIncludeVersion" value="true"/>
+    <add key="ScriptsRootIncludeVersion" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.SwtSigningKey" value="s6L1PpCuOrYHg93h+zszvnbFDSKPIFwwMmWGbfxLc0U=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.RelyingPartyName" value="dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
