--- a/Chalkable.Tests/app.config
+++ b/Chalkable.Tests/app.config
@@ -10,7 +10,7 @@
     <!--<add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMasterTest;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplateTest;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!"/>-->
-    <add name="ChalkableMaster" connectionString="Data Source=YURAN-PC\YURAXP;Initial Catalog=ChalkableMasterTest;UID=sa;Pwd=yurshmir90; Pooling=false"/>
+    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!; Pooling=false"/>
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=YURAN-PC\YURAXP;Initial Catalog=ChalkableSchoolTemplateTest;UID=sa;Pwd=yurshmir90; Pooling=false"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=sa;Pwd=yurshmir90; Pooling=false"/>
     
