--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -117,6 +117,9 @@
     <Compile Include="Connectors\StandardScoreConnector.cs" />
     <Compile Include="Connectors\StudentConnector.cs" />
     <Compile Include="Connectors\SyncConnector.cs" />
+    <Compile Include="Connectors\UsersConnector.cs" />
+    <Compile Include="Exceptions\ChalkableSisException.cs" />
+    <Compile Include="Mapping\ErrorMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncModel\AbsenceLevelReason.cs" />
     <Compile Include="SyncModel\AbsenceReason.cs" />
