--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Connectors\Model\StudentAverageComment.cs" />
     <Compile Include="Connectors\Model\StudentAverages.cs" />
     <Compile Include="Connectors\Model\StudentCondition.cs" />
+    <Compile Include="Connectors\Model\StudentProgressReportComment.cs" />
     <Compile Include="Connectors\Model\User.cs" />
     <Compile Include="Connectors\Model\WorksheetReportParams.cs" />
     <Compile Include="Connectors\ReportConnector.cs" />
