--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -349,6 +349,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Content\fonts.css" />
+    <Content Include="Content\fonts\BebasNeue-webfont.svg" />
+    <Content Include="Content\fonts\delicious-heavy-webfont.svg" />
+    <Content Include="Content\fonts\futura-webfont.svg" />
+    <Content Include="Content\fonts\helveticaneue-ultralight-webfont.svg" />
+    <Content Include="Content\fonts\jrhand-webfont.svg" />
+    <Content Include="Content\fonts\MYRIADPROREGULAR.png" />
+    <Content Include="Content\fonts\oswald-webfont.svg" />
+    <Content Include="Content\fonts\saginawbold-webfont.svg" />
     <Content Include="Scripts\api\chlk-post-message-api.js" />
     <Content Include="Global.asax" />
     <Content Include="loaderio-5b599a813535f4cd31553b713ccbec90.html" />
@@ -485,6 +494,40 @@
     <Content Include="fakeData\seatingChart3.json" />
     <Content Include="Views\Home\Terms.cshtml" />
     <Content Include="Views\Home\Faq.cshtml" />
+    <Content Include="Content\fonts\BebasNeue-webfont.eot" />
+    <Content Include="Content\fonts\BebasNeue-webfont.ttf" />
+    <Content Include="Content\fonts\BebasNeue-webfont.woff" />
+    <Content Include="Content\fonts\delicious-heavy-webfont.eot" />
+    <Content Include="Content\fonts\delicious-heavy-webfont.ttf" />
+    <Content Include="Content\fonts\delicious-heavy-webfont.woff" />
+    <Content Include="Content\fonts\futura-webfont.eot" />
+    <Content Include="Content\fonts\futura-webfont.ttf" />
+    <Content Include="Content\fonts\futura-webfont.woff" />
+    <Content Include="Content\fonts\Futura.ttf" />
+    <Content Include="Content\fonts\HelveticaNeue-CondensedBold.ttf" />
+    <Content Include="Content\fonts\helveticaneue-ultralight-webfont.eot" />
+    <Content Include="Content\fonts\helveticaneue-ultralight-webfont.ttf" />
+    <Content Include="Content\fonts\helveticaneue-ultralight-webfont.woff" />
+    <Content Include="Content\fonts\HelveticaNeue-UltraLight.otf" />
+    <Content Include="Content\fonts\HelveticaNeue.dfont" />
+    <Content Include="Content\fonts\HelveticaNeue.ttf" />
+    <Content Include="Content\fonts\HelveticaNeueUltraLight.ttf" />
+    <Content Include="Content\fonts\jrhand-webfont.eot" />
+    <Content Include="Content\fonts\jrhand-webfont.ttf" />
+    <Content Include="Content\fonts\jrhand-webfont.woff" />
+    <Content Include="Content\fonts\Myriad.ttf" />
+    <Content Include="Content\fonts\MYRIADPRO-REGULAR.OTF" />
+    <Content Include="Content\fonts\MYRIADPROREGULAR.eot" />
+    <Content Include="Content\fonts\MYRIADPROREGULAR.ttf" />
+    <Content Include="Content\fonts\MYRIADPROREGULAR.woff" />
+    <Content Include="Content\fonts\oswald-webfont.eot" />
+    <Content Include="Content\fonts\oswald-webfont.ttf" />
+    <Content Include="Content\fonts\oswald-webfont.woff" />
+    <Content Include="Content\fonts\reenie-beanie.ttf" />
+    <Content Include="Content\fonts\saginawbold-webfont.eot" />
+    <Content Include="Content\fonts\saginawbold-webfont.ttf" />
+    <Content Include="Content\fonts\saginawbold-webfont.woff" />
+    <Content Include="Content\fonts\SaginawBold.ttf" />
     <None Include="Web.qa.config">
       <SubType>Designer</SubType>
       <DependentUpon>Web.config</DependentUpon>
