--- a/Chalkable.BackgroundTaskProducer/app.qa.config
+++ b/Chalkable.BackgroundTaskProducer/app.qa.config
@@ -8,7 +8,7 @@
     <section name="AttendanceNotificationProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="TeacherAttendanceNotification" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="SisImportProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
-
+    <section name="RaygunSettings" type="Mindscape.Raygun4Net.RaygunSettings, Mindscape.Raygun4Net"/>
   </configSections>
   <system.diagnostics>
     <trace>
@@ -25,6 +25,7 @@
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=v8xjnk8au1.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
   </connectionStrings>
+  <RaygunSettings apikey="bQv1lM3oXBupsZQtg3Xhmg==" />
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10"
                           DemoSchoolsReserved="4">
     <Servers>
