--- a/Chalkable.Web/packages.config
+++ b/Chalkable.Web/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
+  <package id="Mindscape.Raygun4Net" version="3.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="PayPalCoreSDK" version="1.4.1" targetFramework="net45" />
   <package id="RestApiSDK" version="0.7.4" targetFramework="net45" />
