Fixed student login

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -45,11 +45,11 @@
   </system.diagnostics>
 
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=v8xjnk8au1.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"  />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=v8xjnk8au1.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <!--<add name="ChalkableMaster" connectionString="Data Source=v8xjnk8au1.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"  />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=v8xjnk8au1.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />-->
 
-    <!--<add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />-->
+    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
 
     <!--<add name="ChalkableMaster" connectionString="Data Source=yqdubo97gg.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=yqdubo97gg.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>-->
@@ -70,8 +70,8 @@
 
     <Servers>
       <!--<add key="DbServer1" value="YURAN-PC\YURAXP" />-->
-      <!--<add key="DbServer1" value="me0buyg8np.database.windows.net" />-->
-      <add key="DbServer1" value="v8xjnk8au1.database.windows.net" />
+      <add key="DbServer1" value="me0buyg8np.database.windows.net" />
+      <!--<add key="DbServer1" value="v8xjnk8au1.database.windows.net" />-->
       <!--<add key="DbServer1" value="yqdubo97gg.database.windows.net" />-->
     </Servers>
   </ChalkableConfiguration>
