added max outgoing connections config

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -75,7 +75,12 @@
       <!--<add key="DbServer1" value="yqdubo97gg.database.windows.net" />-->
     </Servers>
   </ChalkableConfiguration>
-  
+
+  <system.net>
+    <connectionManagement>
+      <add address="*" maxconnection="1000"/>
+    </connectionManagement>
+  </system.net>
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
