Fixed sis user name update sync. clean up code. added log download test

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\Chalkable.BusinessLogic\packages.config" />
   <repository path="..\Chalkable.Data.Common\packages.config" />
   <repository path="..\Chalkable.StiConnector\packages.config" />
+  <repository path="..\Chalkable.Tests\packages.config" />
   <repository path="..\Chalkable.Web\packages.config" />
   <repository path="..\FluentACS\packages.config" />
   <repository path="..\WindowsAzure.Acs.Oauth2\packages.config" />
