--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Services\DemoSchool\Common\DemoSchoolConstants.cs" />
     <Compile Include="Services\DemoSchool\DemoPersonEmailService.cs" />
     <Compile Include="Services\DemoSchool\DemoSisUserService.cs" />
+    <Compile Include="Services\DemoSchool\DemoStaffService.cs" />
     <Compile Include="Services\DemoSchool\DemoStudentParentService.cs" />
     <Compile Include="Services\DemoSchool\DemoStudentAnnouncementService.cs" />
     <Compile Include="Services\DemoSchool\DemoStandardService.cs" />
@@ -215,6 +216,7 @@
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiStandartScoreStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiGradeBookStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiDisciplineStorage.cs" />
+    <Compile Include="Services\DemoSchool\DemoStudentService.cs" />
     <Compile Include="Services\Master\AccessControlService.cs" />
     <Compile Include="Services\Master\ApplicationService.cs" />
     <Compile Include="Services\Master\ApplicationUploadService.cs" />
@@ -304,9 +306,11 @@
     <Compile Include="Services\School\SchoolYearService.cs" />
     <Compile Include="Services\School\ServiceLocatorSchool.cs" />
     <Compile Include="Services\School\SisUserService.cs" />
+    <Compile Include="Services\School\StaffService.cs" />
     <Compile Include="Services\School\StandardService.cs" />
     <Compile Include="Services\School\StudentAnnouncementService.cs" />
     <Compile Include="Services\School\StudentParentService.cs" />
+    <Compile Include="Services\School\StudentService.cs" />
     <Compile Include="Services\School\SyncService.cs" />
     <Compile Include="Services\StorageBlobService.cs" />
     <Compile Include="Services\UserContext.cs" />
