--- a/Chalkable.BackgroundTaskProducer/app.staging.config
+++ b/Chalkable.BackgroundTaskProducer/app.staging.config
@@ -8,6 +8,7 @@
     <section name="AttendanceNotificationProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="TeacherAttendanceNotification" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="SisImportProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="CleanupManager" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer" />
     <section name="RaygunSettings" type="Mindscape.Raygun4Net.RaygunSettings, Mindscape.Raygun4Net"/>
   </configSections>
   <system.diagnostics>
@@ -43,4 +44,5 @@
   <AttendanceNotificationProducer interval="86400" intervalStart="79200" intervalEnd="86400"/>
   <TeacherAttendanceNotification interval="1200" intervalStart="0" intervalEnd="86400"/>
   <SisImportProducer interval="600" intervalStart="0" intervalEnd="86400"/>
+  <CleanupManager interval="600" intervalStart="0" intervalEnd="86400" />
 </configuration>
